# Real-Estate-Market-Intelligence-Platform

./: .env.example  .gitignore  CONTRA_SUMMARY.md  Executive_Summary.md  Makefile  README.md  REPORT.md  REPO_DESCRIPTION.txt  Real_Estate_Market_Executive_Dashboard.pbix  Real_Estate_Market_Interactive_Analysis.py  Real_Estate_Market_Research_Methodology.qmd  index.html  interactive_demo.html  requirements.txt
.github/workflows/: ci.yml
Business_Impact/: ROI_Analysis.md
Demo/: README.md
Files/Initial_Documentation/: README.md
Files/data/: README.md
Files/docs/: business_impact_analysis.md  deployment_guide.md
Files/images/: README.md
Files/src/: analytics_engine.py
Quick_Start/: Installation_Guide.md
Resources/configuration/: pyproject.toml  requirements.txt  tox.ini
Technical/Deployment/: Dockerfile  Makefile  docker-compose.yml  pytest.ini
Technical/Documentation/: api_documentation.md  technical_architecture.md
Technical/Source_Code/: README.md  data_manager.py  main.py  ml_models.py  power_bi_integration.py  real_estate_main.py  visualization_manager.py
Technical/Tests/: README.md  test_main.py
notebooks/: quickstart.ipynb
scripts/: build_report.py  make_demo_data.py
